--- a/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
+++ b/agenda/src/main/resources/com/mycompany/agenda/EstiloGestorContacto.fxml
@@ -52,7 +52,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vBoxAgenda" maxHeight="720.0" maxWidth="900.0" minHeight="685.0" minWidth="900.0" prefHeight="685.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agenda.ContactosController">
+<VBox fx:id="vBoxAgenda" maxHeight="720.0" maxWidth="900.0" minHeight="685.0" minWidth="900.0" prefHeight="685.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agenda.ContactosController">
   <children>
       <VBox alignment="CENTER" prefHeight="32.0" prefWidth="900.0">
          <children>
@@ -81,7 +81,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="32.0">
+                        <Button maxHeight="32.0" maxWidth="32.0" minHeight="32.0" minWidth="32.0" mnemonicParsing="false" onAction="#busquedaAvanzada" prefHeight="32.0" prefWidth="32.0">
                            <graphic>
                               <ImageView fx:id="busquedaAvanzadaButton" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
